--- a/.github/workflows/docker-develop.yml
+++ b/.github/workflows/docker-develop.yml
@@ -32,6 +32,7 @@ jobs:
         run: |
           platform=${{ matrix.platform }}
           echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
+      - run: uname -a
       - name: Check out the repo
         uses: actions/checkout@v4.1.1
       - name: Set up Docker Buildx
