--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "misskey",
-	"version": "2025.1.0.SHINANO.1",
+	"version": "2025.1.0-SHINANO.3",
 	"codename": "Cherry",
 	"repository": {
 		"type": "git",
