--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "misskey",
-	"version": "2025.3.99-SHINANO.2",
+	/*バージョン表記覺書 (メジャー).(マイナー).(パッチ)(プレリリース、99=Alpha,98=beta...って感じ)(プレリリースパッチ)-(独自バージョン)*/
+	"version": "2025.3.2991-SHINANO.1",
 	"codename": "Churchill",
 	"repository": {
 		"type": "git",
