--- a/packages/misskey-js/package.json
+++ b/packages/misskey-js/package.json
@@ -1,7 +1,8 @@
 {
 	"type": "module",
 	"name": "misskey-js",
-	"version": "2025.3.99-SHINANO.2",
+	/*バージョン表記覺書 (メジャー).(マイナー).(パッチ)(プレリリース、99=Alpha,98=beta...って感じ)(プレリリースパッチ)-(独自バージョン)*/
+	"version": "2025.3.2991-SHINANO.1",
 	"description": "Misskey SDK for JavaScript",
 	"license": "MIT",
 	"main": "./built/index.js",
