--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -12,8 +12,8 @@ on:
       # This is a waste of chromatic build quota, so we don't run storybook CI on pull requests targets master.
       - master
       # Neither Dependabot nor Renovate will change the actual behavior for components.
-      - dependabot/**
-      - renovate/**
+      - 'dependabot/**'
+      - 'renovate/**'
 
 jobs:
   build:
