fix(deps): update vite to v6.3.1 (#15857)

--- a/package.json
+++ b/package.json
@@ -84,8 +84,7 @@
 			"@aiscript-dev/aiscript-languageserver": "-"
 		},
 		"patchedDependencies": {
-			"re2": "scripts/dependency-patches/re2.patch",
-			"vite": "scripts/dependency-patches/vite.patch"
+			"re2": "scripts/dependency-patches/re2.patch"
 		}
 	}
 }
