--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "misskey",	
-	"version": "2025.4.1-Beta.5.SHINANO.2+20250430.9",
+	"version": "2025.4.1.SHINANO.1+20250502.1",
 	"codename": "Churchill",
 	"repository": {
 		"type": "git",
