chore(workflow): use `node-version-file` instead of hardcoded `node-version` (#15658)
* chore(workflow): use `node-version-file` instead of hardcoded `node-version`

* chore: test min version

--- a/packages/backend/test-federation/compose.yml
+++ b/packages/backend/test-federation/compose.yml
@@ -16,7 +16,7 @@ services:
       "
 
   tester:
-    image: node:20
+    image: node:${NODE_VERSION}
     depends_on:
       a.test:
         condition: service_healthy
@@ -85,7 +85,7 @@ services:
     command: pnpm -F backend test:fed
 
   daemon:
-    image: node:20
+    image: node:${NODE_VERSION}
     depends_on:
       redis.test:
         condition: service_healthy
