--- a/renovate.json5
+++ b/renovate.json5
@@ -22,6 +22,7 @@
 		'nsfwjs',
     // https://github.com/misskey-dev/misskey/issues/15920
     'sharp',
+		'@misskey-dev/sharp-read-bmp'
 	],
 	packageRules: [
 		{
