--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "misskey",
-	"version": "2025.5.0-vrtl.1",
+	"version": "2025.5.0.SHINANO.1+20250507.2",
 	"codename": "nasubi",
 	"repository": {
 		"type": "git",
