--- a/packages/misskey-js/package.json
+++ b/packages/misskey-js/package.json
@@ -1,7 +1,7 @@
 {
 	"type": "module",
 	"name": "misskey-js",
-	"version": "2025.5.0.SHINANO.1+20250507.2",
+	"version": "2025.5.0.SHINANO.2+20250507.3",
 	"description": "Misskey SDK for JavaScript",
 	"license": "MIT",
 	"main": "./built/index.js",
@@ -31,7 +31,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/misskey-dev/misskey.git",
+		"url": "https://github.com/SHINANOSKEY-Projekt/SHINANOSKEY.git",
 		"directory": "packages/misskey-js"
 	},
 	"devDependencies": {
